Kubernetes/Practice 2 - Ingress simple/hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello-container
          image: hashicorp/http-echo
          args:
            - "-text=Hello from Ingress"
          ports:
            - containerPort: 5678
